--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ timezone: ID # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones 
 author:
   type      : # "person" (default), "organization"
   name      : Hanjara CA
-  url       :
+  url       : https://officeboytokosebelah.com
   avatar    : # path or url of avatar image (square)
   bio       : Share free software is so much fun and life is much meaningfull for sharing happiness.
   email     : hanjara@centragro.org
@@ -51,7 +51,7 @@ author:
   medium    : # "user_name" the last part of your profile url, e.g. https://medium.com/user_name
   zhihu     : # "user_name" the last part of your profile url, e.g. https://www.zhihu.com/people/user_name
   douban    : # "user_name" the last part of your profile url, e.g. https://www.douban.com/people/user_name
-  linkedin  : # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
+  linkedin  : lightiscahaya # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
   github    : mashanz # "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : mashanz # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
 
@@ -81,25 +81,25 @@ license: CC-BY-NC-4.0 # "CC-BY-4.0", "CC-BY-SA-4.0", "CC-BY-NC-4.0", "CC-BY-ND-4
 
 ## TOC
 toc:
-  selectors: # "h1,h2,h3" (default)
+  selectors: h1,h2,h3,h4,h5,h6 # "h1,h2,h3" (default)
 
 
 ## => Markdown Enhancements
 ##############################
 ## Mathjax
-mathjax: # false (default), true
-mathjax_autoNumber: # false (default), true
+mathjax: true # false (default), true
+mathjax_autoNumber: true # false (default), true
 
 ## Mermaid
-mermaid: # false (default), true
+mermaid: true # false (default), true
 
 ## Chart
-chart: # false (default), true
+chart: true # false (default), true
 
 
 ## => Paginate
 ##############################
-paginate: 8
+paginate: 25
 paginate_path: /page:num # don't change this unless for special need
 
 
@@ -211,11 +211,11 @@ defaults:
     values:
       layout: article
       sharing: true
-      license: true
+      license: false
       aside:
         toc: true
-      show_edit_on_github: true
-      show_subscribe: true
+      show_edit_on_github: false
+      show_subscribe: false
       pageview: true
 
 
