--- a/_config.yml
+++ b/_config.yml
@@ -217,6 +217,7 @@ defaults:
       show_edit_on_github: false
       show_subscribe: false
       pageview: true
+      author: mashanz
 
 
 ## => Plugins
