[ADD] rubygems repo

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,6 +1,6 @@
 mashanz:
   type      : # "person" (default), "organization"
-  name      : Hanjara CA
+  name      : Hanjara
   url       : https://officeboytokosebelah.com
   avatar    : # path or url of avatar image (square)
   bio       : Share free software is so much fun and life is much meaningfull for sharing happiness.
