--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ author:
   linkedin  : lightiscahaya # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
   github    : mashanz # "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : mashanz # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
-
+  rubygems  : mashanz # "user_name" the last part of your profile url, e.g. https://rubygems.org/profiles/user_name
 
 ## => GitHub Repository (if the site is hosted by GitHub)
 ##############################
