[UPDATE] SEO images

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -16,3 +16,4 @@ mashanz:
   linkedin  : lightiscahaya # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
   github    : mashanz # "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : mashanz # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
+  rubygems  : mashanz
