--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -13,7 +13,7 @@ mashanz:
   medium    : # "user_name" the last part of your profile url, e.g. https://medium.com/user_name
   zhihu     : # "user_name" the last part of your profile url, e.g. https://www.zhihu.com/people/user_name
   douban    : # "user_name" the last part of your profile url, e.g. https://www.douban.com/people/user_name
-  linkedin  : lightiscahaya # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
+  linkedin  : mashanz # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
   github    : mashanz # "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : mashanz # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
-  rubygems  : mashanz
+  rubygems  : mashanz # "user_name" the last part of your profile url, e.g. https://rubygems.org/profiles/user_name
