[CHANGE] migration site url

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 ##############################
 text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: tomorrow-night # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
-url     : https://officeboytokosebelah.com # the base hostname & protocol for your site e.g. https://www.someone.com
+url     : https://mashanz.com # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : # does not include hostname
 title   : mashanz
 description: > # this means to ignore newlines until "Language & timezone"
@@ -39,7 +39,7 @@ timezone: ID # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones 
 author:
   type      : # "person" (default), "organization"
   name      : Hanjara CA
-  url       : https://officeboytokosebelah.com
+  url       : https://mashanz.com
   avatar    : # path or url of avatar image (square)
   bio       : Share free software is so much fun and life is much meaningfull for sharing happiness.
   email     : hanjara@centragro.org
