--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,7 +1,7 @@
 mashanz:
   type      : # "person" (default), "organization"
   name      : Hanjara
-  url       : https://officeboytokosebelah.com
+  url       : https://mashanz.com
   avatar    : # path or url of avatar image (square)
   bio       : Share free software is so much fun and life is much meaningfull for sharing happiness.
   email     : hanjara@centragro.org
